<resources>
    <string name="app_name">Passenger</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--<string-array name="driverStatusArray">-->
    <!--<item>Available</item>-->
    <!--<item>On The Way</item>-->
    <!--<item> Carrying Passengers</item>-->
    <!--</string-array>-->

    <string name="canceled">Canceled</string>
    <string name="accepted">Accepted</string>
    <string name="on_the_way">On The Way</string>
    <string name="arrived_pickup">Arrived At The Pickup Point</string>
    <string name="passenger_onboard">Passenger On Board</string>
    <string name="arrived_dest">Arrived At The Destination</string>
    <string name="completed">Completed</string>

    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="about_driver">About Driver</string>
    <string name="about_driver_content">Create your account with us , you will find at the driver app if this is the first time try it, this sentence ( Don\'t have an account yet? Register ) , and fill the gaps with your correct info.\nThe payment will be cash at the end of the trip.\nPayment cash Sudanese currency (SD) or the equivalent in foreign currencies will be reimbursed. After your trip, we will email you a receipt.</string>
    <string name="developed_by">Driver is developed by Favicon</string>
    <string name="contact_us_content">Phone: +249917255444\nEmail: drivertaxisudan2017@gmail.com</string>
    <string name="contact_us">Contact us</string>
    <string name="FCM_accepted_new_request">You have accepted this request.\nYou can now view it in the ongoing requests tab</string>
    <string name="FCM_another_driver_accepted">Another driver has alread accepted this request</string>
    <string name="FCM_rejected_request">You have rejected the request</string>
    <string name="authorization_error">Please login to continue</string>
    <string name="server_unknown_error">Unknown error occurred</string>
    <string name="FCMRequest_waiting_for_server">Connecting …</string>
    <string name="logged_elsewhere">You are logged out of this device. Note that you can be loggedin on one device only</string>
    <string name="fcm_ignored">You didn\'t accept</string>
    <string name="request_cancelled_successfully">The request has been cancelled successfully</string>
    <string name="server_timeout">Bad connection. Please check your internet connection</string>
    <string name="already_doing_request">You are already doing a request. Cancel it first and then start this one</string>
    <string name="upcoming_request_options">Do you want to start or cancel this request?</string>
    <string name="start_upcoming_request">Start</string>
    <string name="cancel_upcoming_request">Cancel</string>
    <string name="upcoming_request_do_nothing">Not now</string>
    <string name="cancelling_request">Canceling the request …</string>
    <string name="driver_inactive">Inactive</string>
    <string name="driver_active">Active</string>
    <string name="cancel_current_request_message">Are you sure you want to cancel this request?</string>
    <string name="cancel_current_request">Yes, cancel the request</string>
    <string name="dont_cancel_current_request">No</string>
    <string name="call_passenger_message">Do you want to call the passenger?</string>
    <string name="call_passenger">Call passenger</string>
    <string name="dont_call">No</string>
    <string name="current_request_completed">Thank you for your efforts! The request is complete</string>
    <string name="current_request_cancelled">The request has been canceled</string>
    <string name="updating_request_status">Updating the request status …</string>
    <string name="updating_driver_status">Updating your status …</string>
    <string name="driver_status_changed_successfully">Your status has been set successfully</string>
    <string name="pickup_to_dest_route_failed">Pickup to Destination Route Failed</string>
    <string name="driver_to_pickup_route_failed">Driver to Pickup Route Failed</string>
    <string name="authentication_failure">Authentication failure</string>
    <string name="passenger_cancelled_notification">The passenger Canceled the request no. </string>
    <string name="passenger_completed_notification">The request has been completed</string>
    <string name="accept">Accept</string>
    <string name="reject">reject</string>
    <string name="sdg">  SDG</string>
    <string name="account_info">Account info</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="phone_number">Phone number</string>
    <string name="cancel">Cancel</string>
    <string name="from">From  </string>
    <string name="to">To </string>
    <string name="notes">Notes</string>
    <string name="close">close</string>
    <string name="history">Previous requests</string>
    <string name="Incoming_requests">Incoming Requests</string>
    <string name="profile">Profile</string>
    <string name="about">About Driver</string>
    <string name="sign_out">Logout</string>
    <string name="request_details">Request details</string>
    <string name="fcm_request">New Request</string>
    <string name="go_inactive">Go inactive</string>
    <string name="go_active">Go active</string>
    <string name="Language">عربي</string>
    <string name="decline">Decline</string>
    <string name="click_anywhere_to_accept">Click anywhere to accept</string>
    <string name="driver">Driver</string>
    <string name="time">Time</string>
    <string name="price">Price</string>
    <string name="request_details_notes">Notes</string>
    <string name="remove">Remove</string>
    <string name="done">Done</string>
    <string name="upcoming_requests">Incoming Requests</string>
    <string name="no_incoming_requests">You have no Incoming requests</string>
    <string name="no_previous_requests">You have no Previous requests</string>
    <string name="outdated_app">Your app version is outdated, please get the latest version from play store to continue using this applicatoin</string>
    <string name="new_request_price">%s  SDG</string>
    <string name="new_request_distance">calculating distance ...</string>
    <string name="history_price">%s SDG</string>
    <string name="ride_info">Ride info</string>
    <string name="location_permission_denied">You can\'t receive requests unless you enable this permission\nif you want to receive requests, press the \'Go active\' button below</string>
    <string name="missed">Missed</string>
    <string name="outdated_app_message">Your app is outdated!</string>
    <string name="outdated_app_message_body">Please update your application to continue using this app</string>
    <string name="update">Update</string>
    <string name="OK">OK</string>
    <string name="user_password_incorrect">Email or password are incorrect</string>
</resources>
