<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/current_requests"
            android:icon="@drawable/ic_incoming_requests"
            android:title="@string/Incoming_requests" />
        <item
            android:id="@+id/history"
            android:icon="@drawable/ic_previous_requests"
            android:title="@string/history" />
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_about_driver"
            android:title="@string/about" />
        <item
            android:id="@+id/sign_out"
            android:icon="@drawable/ic_logout"
            android:title="@string/sign_out"/>
        <item
            android:id="@+id/language"
            android:icon="@drawable/ic_switch_language"
            android:title="@string/Language" />

    </group>


</menu>
