<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    tools:context="com.Wisam.passenger.ProfileActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/profile_toolbar"
        android:background="@color/white"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        android:elevation="4dp"/>
    <View
        android:id="@+id/profileGradientShadow"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@drawable/toolbar_shadow"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_collapseMode="pin"/>


    <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1dp"-->
        <!--android:background="@color/sepGray"/>-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="16dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/account_info"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"

                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingTop="10dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/full_name"
                            android:textSize="16sp"
                            android:textColor="#444"

                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/full_name"
                            android:textSize="14sp"
                            android:paddingBottom="10dp"
                            android:textColor="#666"
                            android:paddingTop="4dp"
                            android:id="@+id/profile_fullname"
                            />
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/sepGray"
                            />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingTop="10dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/email"
                            android:textSize="16sp"
                            android:textColor="#444"

                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="user email"
                            android:textSize="14sp"
                            android:paddingBottom="10dp"
                            android:textColor="#666"
                            android:paddingTop="4dp"
                            android:id="@+id/profile_email"
                            />
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/sepGray"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingTop="10dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:id="@+id/profile_gender_layout">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/gender"
                            android:textSize="16sp"
                            android:textColor="#444"

                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="gender"
                            android:textSize="14sp"
                            android:paddingBottom="10dp"
                            android:textColor="#666"
                            android:paddingTop="4dp"
                            android:id="@+id/profile_gender"
                            />
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/sepGray"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingTop="10dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:id="@+id/profile_phone_layout">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/phone_number"
                            android:textSize="16sp"
                            android:textColor="#444"

                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0912341234"
                            android:textSize="14sp"
                            android:paddingBottom="10dp"
                            android:textColor="#666"
                            android:paddingTop="4dp"
                            android:id="@+id/profile_phone"
                            />

                    </LinearLayout>

                </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>